# nadino-ingress

./: .gitignore  .gitmodules  README.md  justfile
auto/: install  make  sources
autoscaler/: README.md  aggregate_logs.py  dynamic_traffic.sh  hpa.py  hpa_fstack.py  ingress_cpu_usage.py  top.c  traffic.lua
conf/: f-stack.conf  nginx.conf  rdma.cfg  rdma_xl170.cfg
microbench/: README.md  meson.build  rdma_server.cpp
scripts/: patch_make.py  setup.sh
src/core/: nginx.c  ngx_cycle.h  pdi_http.h  pdi_rdma.c  pdi_rdma.h  pdi_rdma_config.c  pdi_rdma_config.h  pdi_rdma_sock.c  pdi_rdma_sock.h  pdi_rdma_utils.c  pdi_rdma_utils.h
src/event/: ngx_event_posted.c
src/event/modules/: ngx_ff_module.c  ngx_kqueue_module.c
src/http/: ngx_http_core_module.h  ngx_http_request.c  ngx_http_upstream.c
src/http/modules/: ngx_http_proxy_module.c
src/os/unix/: ngx_process.c  ngx_process.h  ngx_process_cycle.c
